// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Switch /> correctly renders a controlled ON Switch 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    disabled={false}
    size="medium"
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 16,
          "width": 32,
        },
        Object {
          "backgroundColor": "rgba(22, 47, 86, 0.541)",
          "flexDirection": "row",
        },
      ]
    }
    testID="ds-switch"
  >
    <View
      minWidth="12px"
      size="medium"
      style={
        Array [
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1.0)",
            "borderRadius": 6,
            "height": 12,
            "minWidth": 12,
            "position": "absolute",
          },
          Object {
            "alignSelf": "center",
            "flexDirection": "column",
            "left": 2,
            "right": 18,
          },
        ]
      }
    />
  </TouchableOpacity>
</View>
`;

exports[`Renders <Switch /> correctly renders a default Switch 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    disabled={false}
    size="medium"
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 16,
          "width": 32,
        },
        Object {
          "backgroundColor": "rgba(22, 47, 86, 0.541)",
          "flexDirection": "row",
        },
      ]
    }
    testID="ds-switch"
  >
    <View
      minWidth="12px"
      size="medium"
      style={
        Array [
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1.0)",
            "borderRadius": 6,
            "height": 12,
            "minWidth": 12,
            "position": "absolute",
          },
          Object {
            "alignSelf": "center",
            "flexDirection": "column",
            "left": 2,
            "right": 18,
          },
        ]
      }
    />
  </TouchableOpacity>
</View>
`;

exports[`Renders <Switch /> correctly renders a disabled/OFF Switch 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    disabled={true}
    size="medium"
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 16,
          "width": 32,
        },
        Object {
          "backgroundColor": "rgba(22, 47, 86, 0.10)",
          "flexDirection": "row",
        },
      ]
    }
    testID="ds-switch"
  >
    <View
      minWidth="12px"
      size="medium"
      style={
        Array [
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1.0)",
            "borderRadius": 6,
            "height": 12,
            "minWidth": 12,
            "position": "absolute",
          },
          Object {
            "alignSelf": "center",
            "flexDirection": "column",
            "left": 2,
            "right": 18,
          },
        ]
      }
    />
  </TouchableOpacity>
</View>
`;

exports[`Renders <Switch /> correctly renders a disabled/ON Switch 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    disabled={true}
    size="medium"
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 16,
          "width": 32,
        },
        Object {
          "backgroundColor": "rgba(162, 201, 246, 1.0)",
          "flexDirection": "row",
        },
      ]
    }
    testID="ds-switch"
  >
    <View
      minWidth="12px"
      size="medium"
      style={
        Array [
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1.0)",
            "borderRadius": 6,
            "height": 12,
            "minWidth": 12,
            "position": "absolute",
          },
          Object {
            "alignSelf": "center",
            "flexDirection": "column",
            "left": 18,
            "right": 2,
          },
        ]
      }
    />
  </TouchableOpacity>
</View>
`;

exports[`Renders <Switch /> correctly renders a large Switch 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    activeOpacity={1}
    disabled={false}
    size="large"
    style={
      Array [
        Object {
          "borderRadius": 12,
          "height": 24,
          "width": 48,
        },
        Object {
          "backgroundColor": "rgba(22, 47, 86, 0.541)",
          "flexDirection": "row",
        },
      ]
    }
    testID="ds-switch"
  >
    <View
      minWidth="16px"
      size="large"
      style={
        Array [
          Object {
            "backgroundColor": "rgba(255, 255, 255, 1.0)",
            "borderRadius": 8,
            "height": 16,
            "minWidth": 16,
            "position": "absolute",
          },
          Object {
            "alignSelf": "center",
            "flexDirection": "column",
            "left": 4,
            "right": 28,
          },
        ]
      }
    />
  </TouchableOpacity>
</View>
`;
